--- a/Features_Selection.org
+++ b/Features_Selection.org
@@ -44,8 +44,8 @@
     source('libs/data_simulator.R')
 
     data.sim    <- DataSimulator(200)
-    reg.formula <- data.sim$GetVarsFormula()
-    reg.formula <- formula(paste0(reg.formula," + I(x1^2) + x2:x3"))
+    data.formula <- data.sim$GetVarsFormula()
+    reg.formula <- formula(paste0(data.formula," + I(x1^2) + x2:x3"))
 
     db       <- data.sim$GetData()
     train.db <- db[seq(1,150,by=1),]
@@ -79,6 +79,11 @@
     xgb.exp$GetTestErrorGridDashBoard(bayes.error)
 
 
+    rf.exp <-
+
+        RandomForestExplorer(train.db, test.db, data.formula, number.of.models)
+
+    rf.exp$GetRandomForestDashBoard(bayes.error)
   #+end_src
 
 * Data
