Small imporving in code readability

--- a/README.org
+++ b/README.org
@@ -131,7 +131,8 @@
   that might be useful to explain the dependent variable.
   
   #+begin_src R :tangle main.R
-    eda <- DataExplorer(train.db, "y")
+    resp.var <- "y"
+    eda <- DataExplorer(train.db, resp.var)
 
     eda$GetLinePainelDashBoard()
     eda$GetHistogramDashBoard()
@@ -296,282 +297,5 @@
   among variables in a data set. We use visualization techniques and also 2
   different models selection approach. Those techniques have to be used with
   parsimony, but can speed up your analysis.
-
-* Appendix
-** Project Tree (Folders)
-   #+BEGIN_FSTREE: . :relative-links t :non-recursive nil
-   #+END_FSTREE
-* Automate system 						   :noexport:
-** Loaded Questions
-
-   *Projetos precisam ter comeco , muio e fim alem de um objetivo claro.*
-
-   1. Goals scope:
-      1. Generic one
-	 1. Qual eh o escopo? O objetivo? Nunca se esqueca disto.
-	    Construir uma ferramenta para calssifcar se um email eh spam ou NAO
-      2. Specific
-
-	 Usando os dados do site S, investigar as vars Xs e construir um
-         calssificador de emails (SPAM ou NAO) utilizando uma das tecnicas:
-         T1, T2 or T3.
-
-   2. Data scope: *MECE* (mutually exclude collected exhaustive)
-      1. Data
-	 1. Quais dados tenho confianca? E quais nao tenho tanta assim?
-	 2. Os dados sao adequados para o escopo do modelo?
-	 3. Tenho projecao destes dado? Sao boas estas projecoes?
-      2. Ys:
-	 1. Quais periodos tem maior volatilidade?
-	 2. Quais periodos podemos ter inversao (As veze sobe as vezes cai)?
-            Alerta onde podemos erra a direcao. (Preciso calcular as variacoes
-            temporais)
-      3. Xs:
-	 1. Definir quais variaveis serao investigadas. Manter o FOCO
-	 2. ADD alguma coisa aqui
-   3. Modelo
-      1. Oq nao considerei qual seria o palpite intuitivo de como ele
-         afetaria minha projecao? Consigo ver esas relacoes olhando para os
-         residuos e estes fatores que nao estou considerando?
-   4. Res:
-      1. Quais periodos os residuos apresentam bias?
-      2. Qual periodo os residuos apresentam grande variacao? Posso errar pr
-         pouco ou por muito.
-   5. Forecast
-      1. Como estao as projecoes de Xs em relacao a base historica?
-      2. Como minha projecao estah em relacao a base historica? (Acima do
-         ano passad abaixo. Faz sentido?)
-      3. As variacoes temporais (mensai, anuais) da projecao sao compativeis
-         com estas mesamas variacoes na base? Faz sebtido?
-   6. Aplicacao do modelo (Impacto) *<=* (Um dos mais importnates dos items)
-      1. Quais perguntas eu consigo responder com o atual modelo?
-	 1. Pensar na aplicaco ao negocio
-      2. Tipos de perguntas comuns para responder
-	 1. Oq vai acontercer se ocorrer uma reducao de 10%X na var Y?
-	 2. Pq aconteceu esta queda.
-	 3. Oq irá acontecer?
-
-** Analytical process Concepts
-
-1. *Versionado* (SVN, GIT e tortoise)
-
-   1. *Evolui continuamente a passos pequenos*
-   2. Evita re-trabalho
-   3. Registro do projeto no tempo. Mantém analise transparente.
-
-2. *Work in pairs*
-
-   1. Ajuda prevenir blind-spots.
-   2. Acelera curvas de aprendizado
-   3. *Permite construcao de buy-in qdo ooutro par eh da area cliente*
-
-3. *Reproduzivel* Porque?
-
-   1. Nos mantém honesto,
-   2. Permite rever os passos,
-   3. Permite outros rodarem o modelo e assim permite aprendizado
-   4. As coisas continuam funcionado caso eu nao esteja
-
-4. *Documentacao Interna* (Confidencial e pertence ao GTABR)
-
-   1. Salvar a expertise adquirida.
-   2. Ajuda organizar suas ideias. (Qdo vc se obriga a escrever isto de
-      forac a pensar e rever suas ideais)
-   3. Qdo for questionado por algo que fez muito tempo atrás, pode-se
-      consultar a doc.
-   4. Permite outros aproveitar a experiencia adquirida e/ou adaptar
-      para o seu caso.
-   5. Criar uma biblioetca de modelos e reports com Buscas:
-      1. Analista
-      2. R2 adj,
-      3. Error medio ou acumulado na projecao
-      4. Tamanaho da base
-      5. Numero de var investigada ou utilizada na versao final
-      6. Por commodity: soy, freight, wheat
-      7. Por localidade (Mendely ou zotero pode ajudar)
-
-5. *Simples* (Aqui que eu preciso tarbalhar mais na metodologia)
-
-   1. Nosso negocio é muito dinamico e precisar de repostas rapidas
-      (low inertia)
-   2. Muito das nossas atividades nao necessitam de um modelo
-      sofitiscado, o TIME é mais importante. Low hang fruits.
-   3. Muitas areas sao under-staffs
-   4. Actionable
-
-6. *Tools (Software) 2 options*
-
-   1. Powerfull (for modeler)
-      1. Exploratory Analysis
-      2. Easy to cumnicate with: Excel, Agview, SQL, Acces n R
-   2. Super friendly (for modeler n analysts:Tableau)
-      1. New analysys
-      2. Complex projects
-      3. Easy to cumnicate with: Excel, Agview, SQL, Acces n R
-
-** Pragmatic programming principles
-
-   1. DRY: Do not repeat yourself
-   2. Write shy code (Keep your code decoupled)
-      1. Law of least knowledgement.
-      2. Decoupling n Law of Demeter
-	 1. The Law of Demeter for functions states that any method of an
-            obeject can call only methods belongs to:
-	    1. itself
-	    2. parameter that was passed in to the method
-	    3. any object it created
-	    4. any direct held component objects
-   3. Design by Contratc
-   4. Test Unit in mind
-   5. Write code that writes code (Yasnippet)
-   6. Refactor early n often
-   7. Configure do not integrate
-      1. read detail or parmeters form files
-   8. crash early (good practice)
-
-** Export
-*** docx
-
-    1. Change headers structure and create Dev Code n Analysis headers
-    2. Set tags :noexport: to exclude subtree Dev Code n Analysis in the output
-    3. org-html-export-as-html
-    4. Save as html (Stop here to publish as html)
-    5. Edit (delete) xml lines (first 3 lines)
-
-       	#+BEGIN_SRC
-       	<?xml version="1.0" encoding="utf-8"?>
-       	<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-       	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-       	#+END_SRC
-
-    6. Open it in MS word
-    7. *Remember to turn on Navigation Panel in word:*
-       1. View -> Tick Navigation Panel
-
-*** html
-
-    1. Change headers structure and create Dev Code n Analysis headers
-    2. Set tags :noexport: to exclude subtree Dev Code n Analysis in the output
-    3. org-html-export-as-html
-    4. Save as html (Stop here to publish as html)
-    5. Zip (folder do projeto)
-       1. model_2014.org e/ou model_2014.docx
-       2. model_2014.html
-       3. figures
-
-    Se zipar a arvore do projeto os links nao quebram inclusive para as
-    planihas excel e para os dados usado.
-
-*** mardown
-
-    Eh mais popular do que orgmode
-
-    1. org-md-export-to-markdown: C-c C-e m m
-
-    Nao parece estar funcionando comletamente.  Principalmentes, links e
-    tables. Code e headers estao ok
-
-** Email Report results
-
-   Escrever todos os pontos primeiro e depois mostrar resultado (/Aumentar a
-   chance do kara ler os pontos antes de ir para os resultados/)
-
-   Fazer copia do texto e criar planilha para prettfy tabelas, textos e
-   graficos. Seu chefe pode querer rever e fazer alterações antes de vc
-   enviar.
-
-   Abordar os pontos:
-
-   1. Dados
-      1. Fontes do dados e data da ultima atualizacao
-      2. Descrição breve dos dados e a taxa de amostragem: anual, mensal
-         semanal usada
-
-	 /Mensal: Colheita de soja.  SnD Cargill do dia 12/12/2014/
-
-   2. Modelo (regression)
-      1. R2 se nao for muito alto
-      2. Termos sao significativos ou reportar algun pv um pouco maior
-      3. Tamanho da amostra
-	 1. Treino
-	 2. Teste
-      4. Periodo considerado
-   3. key issues
-      1. Algun fator imortante nao considerado
-      2. Algun coeficiente que voc não eh muito confiante
-      3. Dizer onde esta sendo conservador
-   4. Resultado
-      1. Expor dados com maior impacto no periodo da projecao considerada
-         (explicar as maiores altas as maiores quedas, Picos)
-
-	 Ex: Colheita de soja concentrada em Março e por tabela dos 3
-         ultimos anos de Jan a Abril.
-
-      2. Tabela com comparativo: mes anterior, ano passado opu outro periodo
-         que julgar importante. Adicionar min e max e os respectivos
-         comparativos
-
-** Generates Rscripts
-
-   1. C-c C-v t (org-tangle)
-
-** Generates TAGS
-
-   *ess-build-tags-for-directory*
-   M-x ess-build-tags-for-directory run the shel script below for you
-   Ask the directory to run rtags n then ask for file to save (TAGS)
-
-   Unfortunately, these programs do not recognize R code syntax. They do
-   allow tagging of arbitrary language files through regular expressions,
-   but this is not sufficient for R.
-
-   =================================
-   R 2.9.0 onwards provides the rtags function as a tagging utility for R
-   code. It parses R code files (using R's parser) and produces tags in
-   Emacs' etags format.
-
-   Steps:
-   1. Build TAGS
-      1. C-c '
-      2. Menu ESS -> Process -> Start Process -> R
-      3. run line by line code
-   2. visit-tags-table (update hash)
-   3. M-. visit tag (while point in function call)
-
-    #+begin_src R :tangle ../../build_tags.R
-      ## Generate TAGS file
-      cat("Building TAGS file for the project ...\n")
-      print(getwd()) ## project dir
-      rtags(path="tools",recursive = TRUE,verbose=TRUE,ofile = "TAGS")
-      rtags(path="models/soy/Rcode",recursive = TRUE,verbose=TRUE,
-            append = TRUE,
-            ofile = "TAGS")
-
-      rtags(path="models/corn/Rcode",recursive = TRUE,verbose=TRUE,
-            append = TRUE,
-            ofile = "TAGS")
-
-    #+end_src
-
-** Build proj tree
-
-   1. C-c C-c inside FSTREE
-   2. Retirar arvore gerada fora bo bloco FSTREE
-   3. Apagar alguns diretorios que vc nao precisa
-   4. Os links paracem nao funcionar sem espaco depois deles. Entao adicione
-      caso seja necessario
-
-** Code blocks navigation n Run org-babel blocks inside emacs
-
- 1. Colocar :session em todos os blocos para rodar tudo numa unica sessao do R
- 2. Colocar :comments link para poder saltar do tangled file to respectivo org-babel-src
- 3. Use: org-babel-switch-to-session n org-babel-pop-to-session para mudar
-    para buffer do R
- 4. C-c C-v g: org-babel-goto-named-src-block: Jump to org-babel block
- 5. C-c C-j: Jump to orgmode header
- 6. org-babel-tangle-jump-to-org in tamngled file to jump to org-babel-src
- 7. org-babel-detangle propagate changes from tangled file to
-    org-babel-block (But it is not working proper. At least for me and the
-    way a try)
 
 
