--- a/README.org
+++ b/README.org
@@ -6,7 +6,7 @@
 #+TAGS: noexport(n) export(e)
 #+PROPERTY: Effort_ALL 0 0:10 0:20 0:30 1:00 2:00 4:00 6:00 8:00
 
-#+TITLE:     Features_Selection
+#+TITLE:     EDA Start Kit library
 #+AUTHOR:    Leandro Fernandes
 #+EMAIL:     leandro_h_fernandes@cargill.com
 #+DATE:      <2015-12-09 Wed>
