Added some print message to doc

--- a/README.org
+++ b/README.org
@@ -104,12 +104,13 @@
     test.db  <- db[seq(offset + 1,data.size,by=1),]
   #+end_src
 
-  #+RESULTS:
+  #+BEGIN_EXAMPLE
   : Simulated data true model:
   : [1] "y ~ x1 + I(x1^2) + x2 + x2:x3 + x4"
   : Bayes error:
-  : [1] 2
-
+  : [1] 2  
+  #+END_EXAMPLE
+  
 * Exploratory Data
   
   EDA is a critical early step in any data analysis where the goals are to
